--- a/26_Project_postgresql/Connection.ipynb
+++ b/26_Project_postgresql/Connection.ipynb
@@ -6,50 +6,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
+    "import psycopg2 as db\n",
+    "from logger_base import log\n",
+    "import sys\n",
     "\n",
     "class Connection:\n",
     "    \n",
-    "    @staticmethod\n",
-    "    host = \"127.0.0.1\"\n",
+    "    _DATABASE = 'test_db'\n",
+    "    _USERNAME = 'postgres'\n",
+    "    _PASSWORD = 'admin'\n",
+    "    _DB_PORT '5432'\n",
+    "    _HOST = '127.0.0.1'\n",
     "    \n",
-    "    @staticmethod\n",
-    "    dbname = \"test_db\"\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    user = \"postgres\"\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    password = \"admin\"\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    port = \"5432\"\n",
+    "    _connection = None\n",
+    "    _cursor = None\n",
     "    \n",
     "    @classmethod\n",
     "    def get_connection(cls):\n",
-    "        cls.\n",
+    "        if cls._connection is None:\n",
+    "            try:\n",
+    "                cls._connection = db.connect(host = cls._HOST,\n",
+    "                                             user=cls._USERNAME,\n",
+    "                                             password = cls._PASSWORD,\n",
+    "                                             port = cls._DB_PORT,\n",
+    "                                             database = cls._DATABASE)\n",
+    "                log.debug(f'Successful connection!: {cls._connection}')\n",
+    "                return cls._connection\n",
+    "            \n",
+    "            except Exception as e:\n",
+    "                log.debug(f'An ERROR happened when obatininf the Connection: {e}')\n",
+    "                sys.exit() #terminate the program\n",
+    "        else:\n",
+    "            return cls._connection\n",
     "\n",
     "    @classmethod\n",
     "    def get_cursor(cls):\n",
-    "        cls.\n",
+    "        if cls._cursor = None:\n",
+    "            try:\n",
+    "                cls._cursor = cls.get_connection().cursor()\n",
+    "                log.debug(f'Cursor has been opened corectly: {cls._cursor}')\n",
+    "                return cls._cursor\n",
+    "            except Exception as e:\n",
+    "                log.error(f'An ERROR happened when obtaining the Cursor: {e}')\n",
+    "                sys.exit()\n",
+    "        else:\n",
+    "            return cls._cursor\n",
+    "            \n",
+    "        cursor = cls.cursor()\n",
     "        \n",
     "    @classmethod\n",
     "    def close(cls):\n",
-    "        cls.\n",
-    "        \n",
-    "        \n",
-    "    # Establish a connection to the database\n",
-    "    try:\n",
-    "        conn = psycopg2.connect(\n",
-    "            host=host,\n",
-    "            dbname=dbname,\n",
-    "            user=user,\n",
-    "            password=password\n",
-    "        )\n",
-    "        print(\"Connected to the database successfully!\")\n",
-    "    except Exception as e:\n",
-    "        print(\"Unable to connect to the database:\")\n",
-    "        print(e)\n"
+    "        cls.close()"
    ]
   }
  ],
