--- a/26_Project_postgresql/PersonDAO.ipynb
+++ b/26_Project_postgresql/PersonDAO.ipynb
@@ -40,6 +40,38 @@
     "    def delete(cls):\n",
     "        cls.delete"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Titulo\n",
+    "## Subtitulo\n",
+    "### Lavadora\n",
+    "#### Secadora\n",
+    "##### Francia\n",
+    "###### Portugal\n",
+    "\n",
+    "Lista:\n",
+    "\n",
+    "1. Primero\n",
+    "1. Segundo\n",
+    "1. Tercero\n",
+    "\n",
+    "**Negrita**\n",
+    "\n",
+    "*Italics*\n",
+    "\n",
+    "\n",
+    "_Italics_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
