Change in functions

--- a/09_Functions/functions.ipynb
+++ b/09_Functions/functions.ipynb
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Price after tax: 121.0\n"
+      "Price after tax: 106.0\n"
      ]
     }
    ],
@@ -126,27 +126,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The word 'house' means: 'Where people live'\n",
-      " The word 'cat' means: 'Small four-legged animal'\n",
-      " The word 'I' means: 'Myself'\n"
+      " The word 'house' means 'Where people live'\n",
+      " The word 'cat' means 'Small four-legged animal'\n",
+      " The word 'I' means 'Myself'\n"
      ]
     }
    ],
    "source": [
     "def key_value_arguments(**terms): #kwargs\n",
     "    for key, value in terms.items():\n",
-    "        print(f\" The word '{key}' means: '{value}'\")\n",
+    "        print(f\" The word '{key}' means '{value}'\")\n",
     "        \n",
-    "key_value_arguments(house = \"Where people live\",\n",
-    "                   cat = \"Small four-legged animal\",\n",
-    "                   I = \"Myself\")"
+    "\n",
+    "dictionary = {'house' : \"Where people live\",\n",
+    "              'cat' : \"Small four-legged animal\",\n",
+    "              'I' : \"Myself\"}\n",
+    "        \n",
+    "key_value_arguments(**dictionary)"
    ]
   },
   {
