--- a/09_Functions/functions.ipynb
+++ b/09_Functions/functions.ipynb
@@ -80,25 +80,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### args: Variable arguments"
+    "### args: Variable arguments\n",
+    "\n",
+    "This one is used with lists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "New list:\n",
-      " - Jhon\n",
-      " - Grace\n",
-      " - Martin\n",
-      " - William\n",
-      " - Francis\n",
       "\n",
       "New list:\n",
       " - Laura\n",
@@ -113,7 +108,6 @@
     "    for name in names:\n",
     "        print(f\" - {name}\")\n",
     " \n",
-    "listing_names(\"Jhon\", \"Grace\", \"Martin\", \"William\", \"Francis\")\n",
     "listing_names(\"Laura\", \"Grace\", \"Charles\")"
    ]
   },
@@ -121,12 +115,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### kwargs: Variable arguments key-value"
+    "### kwargs: Variable arguments key-value\n",
+    "\n",
+    "This is used with dictionaries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
